# xkcd-mcp

./: .gitignore  CHANGELOG.md  README.md  glama.json  justfile  llms.txt  pyproject.toml
src/xkcd_mcp/: __init__.py  __main__.py  app.py  config.py  server.py  xkcd_api.py
tests/: __init__.py  test_xkcd_api.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  tsconfig.json  vite.config.ts
web_sota/src/: App.tsx  index.css
